--- a/Codling_moth_Code/documentations/Codling_Moth_Generations.tex
+++ b/Codling_moth_Code/documentations/Codling_Moth_Generations.tex
@@ -45,7 +45,7 @@ the file read off the disk! Are not they related?
 
 \code{input:}
 \begin{itemize}
-\item \vari{nYears}: Number of years. (Is not this just length(\vari{Years})?)
+\item \vari{nYears}: Number of years. (Is not this just \code{length(\vari{Years})}?)
 \item \vari{Years}
 \item \vari{leap.year}: A binary vector indicating whether a year is a leap year or not.
 \end{itemize}
