--- a/Codling_moth_Code/documentations/main.tex
+++ b/Codling_moth_Code/documentations/main.tex
@@ -71,7 +71,10 @@
 
 \begin{document}
 
-\title{Help \& Documentation\footnote{Name of the programmer of functions is written in the code for debugging purposes. If you see any flaw, please contact the programmer.}}
+\title{Help \& Documentation\footnote{Name of the programmer 
+of functions is written in the code for debugging 
+purposes. If you see any flaw, please contact 
+the programmer.}}
 \author{}
 \date{}
 \maketitle
