--- a/Codling_moth_Code/documentations/dynamic_model.tex
+++ b/Codling_moth_Code/documentations/dynamic_model.tex
@@ -88,7 +88,7 @@ file.
     \begin{tabular}{| l | l | l | l | l | l| l| l| l | l | l | p{1cm} |}
      \hline
     \scriptsize{\texttt{e0}} & \scriptsize{\texttt{e1}} & \scriptsize{\texttt{a0}} & \scriptsize{\texttt{a1}} & \scriptsize{\texttt{slp}} & \scriptsize{\texttt{tetmlt}} & \scriptsize{\texttt{aa}} & \scriptsize{\texttt{ee}} \\ \hline
-             \scriptsize{\texttt{4.15E+03}} & \scriptsize{\texttt{1.29E+04}} & \scriptsize{\texttt{1.40E+05}} & \scriptsize{v{2.57E+18}} & \scriptsize{\texttt{1.6}} & \scriptsize{\texttt{277}} & \scriptsize{\texttt{a0 / a1}} & \scriptsize{\texttt{e1 - e0}}  \\ \hline
+             \scriptsize{\texttt{4.15E+03}} & \scriptsize{\texttt{1.29E+04}} & \scriptsize{\texttt{1.40E+05}} & \scriptsize{2.57E+18} & \scriptsize{\texttt{1.6}} & \scriptsize{\texttt{277}} & \scriptsize{\texttt{a0 / a1}} & \scriptsize{\texttt{e1 - e0}}  \\ \hline
     \end{tabular}
 \end{center}
  \label{table:None}
@@ -96,7 +96,7 @@ file.
 
 \end{itemize}
 
-\code{output:} A data frame of the following form. The numbers in the {\vari{sr}} column in the table \ref{table:None1} are long numbers I did not put them in there.
+\code{output:} A data frame of the following form.
 
 \begin{table}[!htb]
 \caption{initial data frame to construct the model with.}
@@ -105,8 +105,8 @@ file.
     \begin{tabular}{| l | l | l| l | l | l | l | l | l| l| l| l | p{1cm} |}
     \hline
     \scriptsize{date}  & \scriptsize{time} & \scriptsize{temp\_c} & \scriptsize{temp\_k}  &  \scriptsize{ftmprt} & \scriptsize{sr} & \scriptsize{xi} & \scriptsize{xs} & \scriptsize{ak1} & \scriptsize{Inter-S} & \scriptsize{Inter-E} & \scriptsize{delt} & \scriptsize{Portions} \\ \hline
-     \scriptsize{\texttt{None}} & \scriptsize{\texttt{None}} & \scriptsize{\texttt{15} }& \scriptsize{\texttt{288}} & \scriptsize{\texttt{16.93}} & \scriptsize{\texttt{--}} & \scriptsize{\texttt{1}} & \scriptsize{v{.81}} & \scriptsize{\texttt{.09}} & \scriptsize{\texttt{0.00}} & \scriptsize{\texttt{.07}} & \scriptsize{\texttt{0.00}} & \scriptsize{0}\\ \hline
-     \scriptsize{\texttt{None}}  & \scriptsize{\texttt{None}} & \scriptsize{\texttt{12}} & \scriptsize{\texttt{285}} & \scriptsize{\texttt{12.44}} & \scriptsize{\texttt{-}} & \scriptsize{\texttt{1}} & \scriptsize{\texttt{1.11}} & \scriptsize{\texttt{.06}} & \scriptsize{\texttt{.07}} & \scriptsize{\texttt{.13}} & \scriptsize{\texttt{0.00}} & \scriptsize{{0}}  \\ \hline
+     \scriptsize{\texttt{None}} & \scriptsize{\texttt{None}} & \scriptsize{\texttt{15} }& \scriptsize{\texttt{288}} & \scriptsize{\texttt{16.93}} & \scriptsize{\texttt{22471935.51}} & \scriptsize{\texttt{1}} & \scriptsize{v{.81}} & \scriptsize{\texttt{.09}} & \scriptsize{\texttt{0.00}} & \scriptsize{\texttt{.07}} & \scriptsize{\texttt{0.00}} & \scriptsize{0}\\ \hline
+     \scriptsize{\texttt{None}}  & \scriptsize{\texttt{None}} & \scriptsize{\texttt{12}} & \scriptsize{\texttt{285}} & \scriptsize{\texttt{12.44}} & \scriptsize{\texttt{252887.94}} & \scriptsize{\texttt{1}} & \scriptsize{\texttt{1.11}} & \scriptsize{\texttt{.06}} & \scriptsize{\texttt{.07}} & \scriptsize{\texttt{.13}} & \scriptsize{\texttt{0.00}} & \scriptsize{{0}}  \\ \hline
     \end{tabular}
 \end{center}
  \label{table:None1}
