--- a/Codling_moth_Code/documentations/main.tex
+++ b/Codling_moth_Code/documentations/main.tex
@@ -84,6 +84,7 @@ Codes of this library is written by of Hydro Group members.
 
 \input{dynamic_model}
 \input{Codling_Moth_Generations}
+\input{Hossein_Codes}
 \input{OtherFunctions-Doc}
 
 \end{document}
