--- a/Codling_moth_Code/documentations/main.tex
+++ b/Codling_moth_Code/documentations/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, letterpaper]{article}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
-
+\usepackage{listings}
 \usepackage{array} % table stuff
 \usepackage{tabu} % table stuff
 
@@ -85,7 +85,10 @@ Codes of this library is written by of Hydro Group members.
 \input{dynamic_model}
 \input{Codling_Moth_Generations}
 \input{Hossein_Codes}
-\input{OtherFunctions-Doc}
+% \input{OtherFunctions-Doc}
+
+\input{questions}
+\input{appendix}
 
 \end{document}
 
