--- a/codling_moth/to_write_paper/cod_moth.tex
+++ b/codling_moth/to_write_paper/cod_moth.tex
@@ -270,29 +270,22 @@ Show this for the larval stage. Show for August 23 and Nov 5.
     \centering
     \begin{subfigure}[b]{0.45\textwidth}
         \includegraphics[width=\textwidth]{figures/Larva_Gen_Aug_rcp45}
-        \caption{\small Larva Gen. by Aug. (rcp 4.5)}
-        \label{fig:Larva_Gen_Aug_rcp45)}
     \end{subfigure}
-    ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
+     %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
       %(or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[b]{0.45\textwidth}
         \includegraphics[width=\textwidth]{figures/Larva_Gen_Aug_rcp85}
-        \caption{\small  Larva Gen. by Aug. (rcp 8.5)}
-        \label{fig:Larva_Gen_Aug_rcp85}
-    \end{subfigure}\\
-    \vspace{.2in}
-    \begin{subfigure}[b]{0.45\textwidth}
+    \end{subfigure}\\    
+     %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
+      %(or a blank line to force the subfigure onto a new line)
+          \begin{subfigure}[b]{0.45\textwidth}
         \includegraphics[width=\textwidth]{figures/Larva_Gen_Nov_rcp45}
-        \caption{\small Larva Gen. by Nov. (rcp 4.5)}
-        \label{fig:Larva_Gen_Nov_rcp45}
     \end{subfigure}
-    ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
-    %(or a blank line to force the subfigure onto a new line)
+     %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
+      %(or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[b]{0.45\textwidth}
         \includegraphics[width=\textwidth]{figures/Larva_Gen_Nov_rcp85}
-        \caption{\small  Larva Gen. by Nov. (rcp 8.5)}
-        \label{fig:Larva_Gen_Nov_rcp85}
-    \end{subfigure}
+    \end{subfigure}\\
     \caption{Changes in the number of generations of the pest}\label{fig:CNGP}
 \end{figure}
 
