--- a/codling_moth/to_write_paper/cod_moth.tex
+++ b/codling_moth/to_write_paper/cod_moth.tex
@@ -259,6 +259,27 @@ Adult first flight and egg hatch into larvae (Are these the critical times at wh
     \caption{First adult flights}\label{fig:First_adult_flights}
 \end{figure}
 
+
+\begin{figure}[h!]
+    \hspace{.1in}
+    \begin{subfigure}[b]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{figures/rcp45_Adult_Aug_scale_sens}
+        \caption{Adult first flight (rcp 4.5)}
+        \label{fig:aff_45}
+    \end{subfigure}
+     \hspace{-.1in}
+    ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc. 
+    %(or a blank line to force the subfigure onto a new line)
+    \begin{subfigure}[b]{0.5\textwidth}
+        \includegraphics[width=\textwidth]{figures/rcp45_Adult_Aug_scale_sens}
+        \caption{Adult first flight (rcp 8.5)}
+        \label{fig:aff_85}
+    \end{subfigure}
+    \caption{First adult flights}\label{fig:First_adult_flights}
+\end{figure}
+
+
+
 \pagebreak
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
