--- a/codling_moth/to_write_paper/cod_moth.tex
+++ b/codling_moth/to_write_paper/cod_moth.tex
@@ -181,6 +181,26 @@ Can we add something related to gaps. That is what are we offering beyond rehash
 \begin{figure}[h!]
 \begin{subfigure}{.5\textwidth}
   \centering
+  \includegraphics[width=1\linewidth]{./rcp45_50}
+  \label{fig:DDC45}
+\caption{Degree Day Changes (rcp 4.5)}
+\end{subfigure}
+\begin{subfigure}{.5\textwidth}
+  \centering
+  \includegraphics[width=1\linewidth]{./rcp45_50}
+  \label{fig:DDC85}
+\caption{Degree Day Changes (rcp 8.5)}
+\end{subfigure}
+%%%%%%%
+\caption{Degree Day changes over a year}
+\label{fig:DDC}
+\end{figure}
+
+
+\iffalse
+\begin{figure}[h!]
+\begin{subfigure}{.5\textwidth}
+  \centering
   \includegraphics[width=1\linewidth]{figures/cumdd_plots/cumdd_qrt_rcp45copy}
   \label{fig:DDC45}
 \caption{Degree Day Changes (rcp 4.5)}
@@ -195,6 +215,7 @@ Can we add something related to gaps. That is what are we offering beyond rehash
 \caption{Degree Day changes over a year}
 \label{fig:DDC}
 \end{figure}
+\fi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -337,6 +358,8 @@ Show this for the larval stage. Show for August 23 and Nov 5.
 
 \subsection{Relative fraction of larvae escaping diapause induction}
 Some text has to go here.
+
+\iffalse
 \begin{figure}[h!]
     \centering
     \begin{subfigure}[b]{0.45\textwidth}
@@ -353,6 +376,7 @@ Some text has to go here.
     \end{subfigure}
     \caption{Relative fraction of larvae escaping diapause induction}\label{fig:RFLEDI}
 \end{figure}
+\fi
 
 
 
