--- a/analogy/My Collection.bib
+++ b/analogy/My Collection.bib
@@ -38,3 +38,39 @@ pages = {199--236},
 title = {{Matching as Nonparametric Preprocessing for Reducing Model Dependence in Parametric Causal Inference}},
 year = {2007}
 }
+
+@article{Ho2011,
+author = {Ho, Daniel E. and Imai, Kosuke and King, Gary and Stuart, Elizabeth A.},
+doi = {10.18637/jss.v042.i08},
+isbn = {1548-7660},
+issn = {1548-7660},
+journal = {Journal of Statistical Software},
+number = {8},
+title = {MatchIt: Nonparametric Preprocessing for Parametric Causal Inference},
+volume = {42},
+year = {2011}
+}
+
+@article{Way2007,
+author = {Ho, Daniel E. and Imai, Kosuke and King, Gary and Stuart, Elizabeth A.},
+doi = {10.1093/pan/mpl013},
+isbn = {1047198714764989},
+issn = {10471987},
+journal = {Political Analysis},
+number = {3},
+pages = {199--236},
+title = {Matching as nonparametric preprocessing for reducing model dependence in parametric causal inference},
+volume = {15},
+year = {2007}
+}
+
+
+@inproceedings{Yang2004,
+author = {Yang, Kiyoung and Shahabi, Cyrus},
+booktitle = {Proceedings of the 2nd ACM international workshop on Multimedia databases  - MMDB '04},
+doi = {10.1145/1032604.1032616},
+isbn = {1581139756},
+issn = {0144-8420},
+title = {A PCA-based similarity measure for multivariate time series},
+year = {2004}
+}
