--- a/analogy/My Collection.bib
+++ b/analogy/My Collection.bib
@@ -1,7 +1,7 @@
 @article{Multivariate2018,
 author = {Multivariate, Title},
 journal = {Matching},
-title = {{Package ‘ Matching '}},
+title = {{Package Matching}},
 year = {2018}
 }
 
