centroid mystery solved

--- a/remote_sensing/python/first_try/first draft.ipynb
+++ b/remote_sensing/python/first_try/first draft.ipynb
@@ -1,96 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/hn/anaconda3/bin/python'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import sys\n",
-    "sys.executable"
+    "## First Code to Download EE files\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/hn/Documents/GitHub/Ag/remote_sensing/python/first_try',\n",
-       " '/Users/hn/anaconda3/lib/python37.zip',\n",
-       " '/Users/hn/anaconda3/lib/python3.7',\n",
-       " '/Users/hn/anaconda3/lib/python3.7/lib-dynload',\n",
-       " '',\n",
-       " '/Users/hn/.local/lib/python3.7/site-packages',\n",
-       " '/Users/hn/anaconda3/lib/python3.7/site-packages',\n",
-       " '/Users/hn/anaconda3/lib/python3.7/site-packages/aeosa',\n",
-       " '/Users/hn/anaconda3/lib/python3.7/site-packages/IPython/extensions',\n",
-       " '/Users/hn/.ipython']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sys.path"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import ee\n",
+    "ee.Initialize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting virtualenv\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c5/97/00dd42a0fc41e9016b23f07ec7f657f636cb672fad9cf72b80f8f65c6a46/virtualenv-16.7.7-py2.py3-none-any.whl (3.4MB)\n",
-      "\u001b[K     |████████████████████████████████| 3.4MB 3.2MB/s eta 0:00:01\n",
-      "\u001b[?25hInstalling collected packages: virtualenv\n",
-      "\u001b[33m  WARNING: The script virtualenv is installed in '/Users/hn/.local/bin' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
-      "Successfully installed virtualenv-16.7.7\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install --user virtualenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-538110917b2a>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-538110917b2a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    python -m ipykernel install --user --name=myenv\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "python -m ipykernel install --user --name=myenv"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
