--- a/remote_sensing/python/colab/Read_shapefiles_get_EE_images.ipynb
+++ b/remote_sensing/python/colab/Read_shapefiles_get_EE_images.ipynb
@@ -22,21 +22,42 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/HNoorazar/Ag/blob/master/remote_sensing/Read_shapefiles_get_EE_images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/HNoorazar/Ag/blob/master/remote_sensing/python/colab/Read_shapefiles_get_EE_images.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "GbHpob8Nd832",
-        "colab_type": "code",
-        "colab": {}
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "\n",
+        "- # Colab in Python Tutorial:\n",
+        "[https://colab.research.google.com/github/csaybar/EEwPython/blob/master/1_Introduction.ipynb](https://colab.research.google.com/github/csaybar/EEwPython/blob/master/1_Introduction.ipynb)\n",
+        "\n",
+        "This is a good and dimportant start. It includes, for e.g.:\n",
+        "\n",
+        "## 7. Fundamental Earth Engine data structures\n",
+        "\n",
+        "The two most fundamental geographic data structures in Earth Engine are **`Image`** and **`Feature`** corresponding to raster and vector data types, respectively. Images are composed of bands and a dictionary of properties. Features are composed of a **`Geometry`** and a dictionary of properties. A stack of images (e.g. an image time series) is handled by an **`ImageCollection`**. A collection of features is handled by a  **`FeatureCollection`**. Other fundamental data structures in Earth Engine include:\n",
+        "\n",
+        "- `Dictionary`\n",
+        "- `List`\n",
+        "- `Array`\n",
+        "- `Geometry`\n",
+        "- `Date`\n",
+        "- `Number`\n",
+        "- `String`.\n",
+        "\n",
+        "It is important to remember that these are all **server-side objects (or containers)**. That is, your client browser does not know anything about the objects in your script unless you explicitly request information about them. That request triggers a message being passed from Google to the Python API. If the message is large, there will be a corresponding slow down. Existing two ways to inspect **Earth Engine containers**  in Python console. The first one, `print()` that return the  petition (as a JSON) to the server and `*.getInfo()` that returns the contents of the `container`.  The next section summaries all the Data Structures mentioned above.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "- # GEE DataSet\n",
+        "[https://developers.google.com/earth-engine/datasets/catalog/USGS_SRTMGL1_003](https://developers.google.com/earth-engine/datasets/catalog/USGS_SRTMGL1_003)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -45,7 +66,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Read shapefiles and use them to get images off EE."
+        "# Read shapefiles and use them to get images off EE.\n"
       ]
     },
     {
