re-arrangeing before Mike Meeting

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/Peak and plot simultaneously.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/Peak and plot simultaneously.ipynb
@@ -302,7 +302,11 @@
     "\n",
     "    year = int(curr_field['year'].unique())\n",
     "    plant = curr_field['CropTyp'].unique()[0]\n",
-    "    plant = plant.replace(\"/\", \",\")\n",
+    "    \n",
+    "    plant = plant.replace(\"/\", \"_\")\n",
+    "    plant = plant.replace(\",\", \"_\")\n",
+    "    plant = plant.replace(\" \", \"_\")\n",
+    "    \n",
     "    county = curr_field['county'].unique()[0]\n",
     "    TRS = curr_field['TRS'].unique()[0]\n",
     "\n",
@@ -465,10 +469,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plant = \"Apple, B\""
+   ]
   },
   {
    "cell_type": "code",
