--- a/remote_sensing/python/Local_Jupyter_NoteBooks/Peak and plot simultaneously.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/Peak and plot simultaneously.ipynb
@@ -225,7 +225,7 @@
     "a_df['CovrCrp'] = \"NA\" \n",
     "a_df['DataSrc'] = \"NA\" \n",
     "\n",
-    "a_df = rc.initial_clean(a_df)\n",
+    "a_df = rc.initial_clean_NDVI(a_df)\n",
     "a_df.head(2)"
    ]
   },
@@ -260,7 +260,7 @@
     "an_EE_TS = a_df.copy()\n",
     "an_EE_TS = an_EE_TS.iloc[1:1000]\n",
     "\n",
-    "an_EE_TS = rc.initial_clean(an_EE_TS)\n",
+    "# an_EE_TS = rc.initial_clean_NDVI(an_EE_TS)\n",
     "\n",
     "### List of unique polygons\n",
     "polygon_list = an_EE_TS['geo'].unique()\n",
