all chill and remote

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/04_same_size_vectors_test.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/04_same_size_vectors_test.ipynb
@@ -443,7 +443,11 @@
    "outputs": [],
    "source": [
     "NCS_peakse = rc.my_peakdetect(y_axis=y_NCS_pred, x_axis=X, delta=0.1);\n",
-    "NCS_max_peaks =  NCS_peakse[0];"
+    "NCS_max_peaks =  NCS_peakse[0];\n",
+    "NCS_peaks_spline = rc.separate_x_and_y(max_peak_list = NCS_max_peaks);\n",
+    "# print(peaks_spline)\n",
+    "NCS_DoYs_series = pd.Series(NCS_peaks_spline[0]);\n",
+    "NCS_peaks_series = pd.Series(NCS_peaks_spline[1]);"
    ]
   },
   {
@@ -451,12 +455,7 @@
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "NCS_peaks_spline = rc.separate_x_and_y(max_peak_list = NCS_max_peaks);\n",
-    "# print(peaks_spline)\n",
-    "NCS_DoYs_series = pd.Series(NCS_peaks_spline[0]);\n",
-    "NCS_peaks_series = pd.Series(NCS_peaks_spline[1]);"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
