a lot of things, who knows what

--- a/remote_sensing/python/Local_Jupyter_NoteBooks/04_Savitzky_smooth_scratch_4_Aeolus.ipynb
+++ b/remote_sensing/python/Local_Jupyter_NoteBooks/04_Savitzky_smooth_scratch_4_Aeolus.ipynb
@@ -39,7 +39,7 @@
     "data_dir = \"/Users/hn/Documents/01_research_data/remote_sensing/\" + \\\n",
     "           \"/01_NDVI_TS/no_ID/Grant/No_EVI/Grant_10_cloud/Grant_2016/\"\n",
     "\n",
-    "param_dir = \"/Users/hn/Documents/00_GitHub/Ag/remote_sensing/parameters/\"\n"
+    "param_dir = \"/Users/hn/Documents/00_GitHub/Ag/remote_sensing/parameters/\""
    ]
   },
   {
